--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ed C. Lee">
 
     <title>Ed C. Lee</title>
-
+    <link rel='shortcut icon' href="/assets/images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap Core CSS -->
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 
