added bring it url

--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
         <div class="projects-section">
             <div class="container">
             	<h2>Projects</h2>
-            	<a href="" target="_blank">
+            	<a href="http://ec2-54-149-120-56.us-west-2.compute.amazonaws.com:8000/#/" target="_blank">
             		<div class="project">
 	        			<h3>Bring It</h3>
 	        			<p>
