--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../assets/css/grayscale.css" rel="stylesheet">
+    <link href="../assets/css/custom.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -26,6 +26,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
 	<script src="angular/app.js"></script>
     <script src="angular/controllers/controller.js"></script>
+    <script src="angular/factories/factory.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-controller="appController">
@@ -167,7 +168,7 @@
     <script src="../assets/js/jquery.easing.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../assets/js/grayscale.js"></script>
+    <script src="../assets/js/custom.js"></script>
 </body>
 
 </html>
