Added images to projects

--- a/client/index.html
+++ b/client/index.html
@@ -103,30 +103,36 @@
         <div class="projects-section">
             <div class="container">
             	<h2>Projects</h2>
-            	<a href="http://ec2-54-149-120-56.us-west-2.compute.amazonaws.com:8000/#/" target="_blank">
-            		<div class="project">
-	        			<h3>Bring It</h3>
-	        			<p>
-	        				"Bring It" is an event organizer that allows you to schedule an event, make a list of items to bring, and invite your guests to the event.
-	        			</p>
-	    			</div>
-            	</a>
-    			<a href="http://text-me-app.herokuapp.com" target="_blank">
-    				<div class="project">
-	        			<h3>TextMe</h3>
-	        			<p>
-	        				TextMe is a simple web application that uses the Twilio API to send SMS notification or reminder to any numbers. 
-	        			</p>
-	    			</div>
-    			</a>
-    			<a href="http://yearbook-may-2015.herokuapp.com" target="_blank">
-                    <div class="project">
-	        			<h3>Yearbook</h3>
-	        			<p>
-	        				An interactive and dynamic AngularJS yearbook application made for the students of the Coding Dojo May 2015 Cohort. 
-	        			</p>
-	    			</div>
-    			</a>
+        		<div class="project">
+        			<h3>Bring It</h3>
+        			<p>
+        				"Bring It" is an event organizer that allows you to schedule an event, make a list of items to bring, and invite your guests to the event.
+        			</p>
+                    <p>Click the image below to get the app!</p>
+                    <a href="http://ec2-54-149-120-56.us-west-2.compute.amazonaws.com:8000/#/" target="_blank">
+                        <img src="./../assets/images/bringit.png" class="project_img">
+                    </a>
+    			</div>    			
+				<div class="project">
+        			<h3>TextMe</h3>
+        			<p>
+        				TextMe is a simple web application that uses the Twilio API to send SMS notification or reminder to any numbers. 
+        			</p>
+                    <p>Click the image below to get the app!</p>
+                    <a href="http://text-me-app.herokuapp.com" target="_blank">
+                        <img src="./../assets/images/textme.png" class="project_img">
+        			</a>
+                </div>
+                <div class="project">
+                    <h3>Yearbook</h3>
+                    <p>
+                        An interactive and dynamic AngularJS yearbook application made for the students of the Coding Dojo May 2015 Cohort. 
+                    </p>
+                    <p>Click the image below to get the app!</p>
+        			<a href="http://yearbook-may-2015.herokuapp.com" target="_blank">
+                        <img src="./../assets/images/yearbook.png" class="project_img">
+        			</a>
+                </div>
             </div>
         </div>
     </section>
