--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Profile Website</title>
-
+    <meta name="description" content="Ed's interactive resume website.">
+    <meta name="author" content="Ed C. Lee">
+    <title>Ed C. Lee</title>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
@@ -31,11 +28,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
-
 <body id="page-top">
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -48,7 +42,6 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Ed C. Lee</a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -79,7 +72,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
     <header>
         <div id="home" class="header-content">
             <div class="header-content-inner">
@@ -90,7 +82,6 @@
             </div>
         </div>
     </header>
-
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
@@ -109,7 +100,6 @@
             </div>
         </div>
     </section>
-
     <section id="exp">
         <div class="container">
             <div class="row">
@@ -276,7 +266,6 @@
             </div>
         </div>
     </section>
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
@@ -290,7 +279,5 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
-
 </body>
-
 </html>
