Added resume and favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ed's interactive resume website.">
     <meta name="author" content="Ed C. Lee">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/ >
     <title>Ed C. Lee</title>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -126,13 +127,13 @@
             <hr>
             <div class="row">
                 <div class="text-center">
-                    <h2>Little Ivy</h2>
+                    <h2>Little Ivy Education</h2>
                     <h4>Program Manager</h4>
                     <p>Aug 2013 to July 2014</p>
                 </div>
                 <div class="details">
                     <p>
-                        Little Ivy was an educational startup located in Brooklyn, NY and it was trying to bring positive changes to the neigborhood that it was serving. I hopped on board in hoping to make a change to the children in their education/future. While studying for my Master's degree at NYU, I saw a different reality in some of the rougher neigborhoods. I felt compelled to offer assistance in any shape or form and that was when I decided to become the Program Manager at Little Ivy.
+                        Little Ivy Education was an educational startup located in Brooklyn, NY and it was trying to bring positive changes to the neigborhood that it was serving. I hopped on board in hoping to make a change to the children in their education/future. While studying for my Master's degree at NYU, I saw a different reality in some of the rougher neigborhoods. I felt compelled to offer assistance in any shape or form and that was when I decided to become the Program Manager at Little Ivy.
                     </p>
                     <p>
                         At the time, I contributed by offering what I learned from NYU and I had to wear many hats to ensure the operational and finanical aspects were running at 100%. 
@@ -251,17 +252,21 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-md-4 text-center">
-                    <i class="fa fa-linkedin fa-3x"></i>
+                <div class="col-md-3 text-center">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
                     <p><a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">LinkedIn</a></p>
                 </div>
-                <div class="col-md-4 text-center">
-                    <i class="fa fa-github fa-3x"></i>
+                <div class="col-md-3 text-center">
+                    <i class="fa fa-github-square fa-3x"></i>
                     <p><a href="https://github.com/chenyu-ed-lee" target="_blank">Github</a></p>
                 </div>
-                <div class="col-md-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x"></i>
+                <div class="col-md-3 text-center">
+                    <i class="fa fa-envelope fa-3x"></i>
                     <p><a href="mailto:chenyu.ed.lee@gmail.com">chenyu.ed.lee@gmail.com</a></p>
+                </div>
+                <div class="col-md-3 text-center">
+                    <i class="fa fa-file-text fa-3x"></i>
+                    <p><a href="files/ed_resume.pdf" target="_blank">My Resume</a></p>
                 </div>
             </div>
         </div>
