Add profile picture

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
             <div class="header-content-inner">
                 <h1>Ed C. Lee</h1>
                 <hr>
-                <p>I am a Developer/Coding Ninja/Programmer</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Start Here</a>
+                <div ><img src="img/me.jpg" id="profile_pic"></div>
+                <h3>I am a Developer/Coding Ninja/Programmer</h3>
+                <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Start Here</a> -->
             </div>
         </div>
     </header>
