--- a/index.html
+++ b/index.html
@@ -53,15 +53,6 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#exp">Experience</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#edu">Education</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#skills">Skills</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
@@ -79,7 +70,7 @@
                 <h1>Ed C. Lee</h1>
                 <hr>
                 <div ><img src="img/me.jpg" id="profile_pic"></div>
-                <h3>I am a Developer/Coding Ninja/Programmer</h3>
+                <h3>I am a Web Developer/Coding Ninja</h3>
                 <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Start Here</a> -->
             </div>
         </div>
@@ -93,7 +84,7 @@
                 </div>
                 <div class="details">
                     <p>
-                        I am a web developer with a business background. As a developer, I really enjoy spending time on fine-tuning little details and building web sites or rich interactive web apps. As a business professional, I enjoy spending time to communicate and understand how I can be helpful to someone. Possessing both elements, I would combine the best of both worlds to create values and strive for quality. Also, I like working in a team with others because I can learn from others and complement one another to produce the best results.  
+                        I am a web developer with a business background. As a developer, I really enjoy spending time on fine-tuning little details and building web sites or rich interactive web apps. As a business professional, I enjoy spending time to communicate and understand how I can be helpful to someone. Possessing both elements, I would combine the best of both worlds to create values and strive for quality.  
                     </p>
                     <p>
                         In my spare time, I like to shoot some hoops, check Reddit for the latest, and cook delicious food.
@@ -102,97 +93,6 @@
             </div>
         </div>
     </section>
-    <section id="exp">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Experience</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="text-center">
-                    <h2>Box</h2>
-                    <h4>Metadata Support Ops</h4>
-                    <p>Nov 2014 to May 2015</p>
-                </div>
-                <div class="details">
-                    <p>
-                        At Box, I worked closely with the Metadata team as a support ops. Box was the first technology company where I experienced the tech culture. Not only that, I was very grateful that I had the opportunity to work along side with some of smartest engineers because they are the ones who inspired me to learn and strive for more. During my time there, my main responsibility was to help Box's clients to set up Metadata template feature, conduct demos, and answer any questions related to the feature.
-                    </p> 
-                    <p>
-                        While at Box, I helped migrate Box's Content and View API documentations onto a third party platform named Readme.io: <a href="https://box-content.readme.io/reference" target="_blank">check it out here</a>. It was my first exposure to APIs. 
-                    </p>
-                </div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="text-center">
-                    <h2>Little Ivy Education</h2>
-                    <h4>Program Manager</h4>
-                    <p>Aug 2013 to July 2014</p>
-                </div>
-                <div class="details">
-                    <p>
-                        Little Ivy Education was an educational startup located in Brooklyn, NY and it was trying to bring positive changes to the neigborhood that it was serving. I hopped on board in hoping to make a change to the children in their education/future. While studying for my Master's degree at NYU, I saw a different reality in some of the rougher neigborhoods. I felt compelled to offer assistance in any shape or form and that was when I decided to become the Program Manager at Little Ivy.
-                    </p>
-                    <p>
-                        At the time, I contributed by offering what I learned from NYU and I had to wear many hats to ensure the operational and finanical aspects were running at 100%. 
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <aside class="bg-dark"></aside>
-    <section id="edu">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Education</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="text-center">
-                <h2>New York University</h2>
-                <h4>M.S. in Business Management - 2012 to 2014</h4>
-            </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="text-center">
-                <h2>UC Irvine</h2>
-                <h4>B.A. in Business Economics - 2007 to 2011</h4>
-            </div>
-        </div>
-    </section>
-    <aside class="bg-dark"></aside>
-    <section id="skills">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Skills</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 text-center"><h4>JavaScript</h4></div>
-                <div class="col-md-4 text-center"><h4>AngularJS</h4></div>
-                <div class="col-md-4 text-center"><h4>Node.js</h4></div>
-                <div class="col-md-4 text-center"><h4>Ruby</h4></div>
-                <div class="col-md-4 text-center"><h4>Rails</h4></div>
-                <div class="col-md-4 text-center"><h4>Socket.IO</h4></div>
-                <div class="col-md-4 text-center"><h4>HTML</h4></div>
-                <div class="col-md-4 text-center"><h4>CSS</h4></div>
-                <div class="col-md-4 text-center"><h4>jQuery</h4></div>
-                <div class="col-md-4 text-center"><h4>PHP</h4></div>
-                <div class="col-md-4 text-center"><h4>Codeigniter</h4></div>
-                <div class="col-md-4 text-center"><h4>MySQL</h4></div>
-            </div>
-        </div>
-    </section>
-    <aside class="bg-dark"></aside>
     <section id="projects">
         <div class="container-fluid">
             <div class="row">
@@ -201,7 +101,7 @@
                     <hr class="primary">
                 </div>
             </div>
-            <div class="project">
+<!--             <div class="project">
                 <a href="http://ec2-54-149-120-56.us-west-2.compute.amazonaws.com:8000/#/" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/bringit.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -214,7 +114,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
             <div class="project">
                 <a href="https://text-me-app.herokuapp.com/" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/textme.png" class="img-responsive" alt="">
@@ -254,20 +154,28 @@
                     <hr class="primary">
                 </div>
                 <div class="col-md-3 text-center">
-                    <i class="fa fa-linkedin-square fa-3x"></i>
-                    <p><a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">LinkedIn</a></p>
+                    <a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">
+                        <i class="fa fa-linkedin-square fa-3x"></i>
+                        <p>LinkedIn</p>
+                    </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <i class="fa fa-github-square fa-3x"></i>
-                    <p><a href="https://github.com/chenyu-ed-lee" target="_blank">Github</a></p>
+                    <a href="https://github.com/chenyu-ed-lee" target="_blank">
+                        <i class="fa fa-github-square fa-3x"></i>
+                        <p>Github</p>
+                    </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <i class="fa fa-envelope fa-3x"></i>
-                    <p><a href="mailto:chenyu.ed.lee@gmail.com">chenyu.ed.lee@gmail.com</a></p>
+                    <a href="mailto:chenyu.ed.lee@gmail.com">
+                        <i class="fa fa-envelope fa-3x"></i>
+                        <p>chenyu.ed.lee@gmail.com</p>
+                    </a>
                 </div>
                 <div class="col-md-3 text-center">
-                    <i class="fa fa-file-text fa-3x"></i>
-                    <p><a href="files/ed_resume.pdf" target="_blank">My Resume</a></p>
+                    <a href="files/ed_resume.pdf" target="_blank">
+                        <i class="fa fa-file-text fa-3x"></i>
+                        <p>My Resume</p>
+                    </a>
                 </div>
             </div>
         </div>
