--- a/index.html
+++ b/index.html
@@ -115,35 +115,61 @@
                     </div>
                 </a>
             </div> -->
-            <div class="project">
-                <a href="https://text-me-app.herokuapp.com/" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/textme.png" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                <h2>TextMe</h2>
-                                <p>TextMe is a simple web app that uses the Twilio API to send SMS to any numbers.</p>
-                                <p>Technologies used: Ruby on Rails, Twilio API, HTML, CSS</p>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+
+                    <div class="col-md-6 text-center">
+                        <div class="project" data-toggle="modal" data-target="#myModal">
+                            <div class="portfolio-box">
+                                <img src="img/portfolio/textme.png" class="img-responsive" alt="">
+                                <div class="portfolio-box-caption">
+                                    <div class="portfolio-box-caption-content">
+                                        <div class="project-name">
+                                            <h2>TextMe</h2>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </a>
-            </div>
-            <div class="project">
-                <a href="https://yearbook-may-2015.herokuapp.com/" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/yearbook.png" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-name">
-                                <h2>Yearbook</h2>
-                                <p>An interactive and dynamic AngularJS yearbook application made for the students of the Coding Dojo May 2015 Cohort.</p>
-                                <p>Technologies used: AngularJS, Node.js, Express, HTML, CSS, Twitter Bootstrap</p>
-                            </div>
+                    <div class="col-md-6 text-center">
+                        <div class="project">
+                            <a href="https://yearbook-may-2015.herokuapp.com/" class="portfolio-box" target="_blank">
+                                <img src="img/portfolio/yearbook.png" class="img-responsive" alt="">
+                                <div class="portfolio-box-caption">
+                                    <div class="portfolio-box-caption-content">
+                                        <div class="project-name">
+                                            <h2>Yearbook</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                </a>
+
+                </div>
             </div>
-        </div>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+<div class="modal-dialog">
+
+<!-- Modal content-->
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal">&times;</button>
+<h4 class="modal-title">TextMe</h4>
+</div>
+<div class="modal-body">
+<p>Some text in the modal.</p>
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div>
+
+</div>
+</div>
     </section>
     <aside class="bg-dark"></aside>
     <section id="contact">
@@ -152,31 +178,32 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
+                    <div class="col-md-3 text-center">
+                        <a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">
+                            <i class="fa fa-linkedin-square fa-3x"></i>
+                            <p>LinkedIn</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <a href="https://github.com/chenyu-ed-lee" target="_blank">
+                            <i class="fa fa-github-square fa-3x"></i>
+                            <p>Github</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <a href="mailto:chenyu.ed.lee@gmail.com">
+                            <i class="fa fa-envelope fa-3x"></i>
+                            <p>Email</p>
+                        </a>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <a href="files/ed_resume.pdf" target="_blank">
+                            <i class="fa fa-file-text fa-3x"></i>
+                            <p>My Resume</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="col-md-3 text-center">
-                    <a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">
-                        <i class="fa fa-linkedin-square fa-3x"></i>
-                        <p>LinkedIn</p>
-                    </a>
-                </div>
-                <div class="col-md-3 text-center">
-                    <a href="https://github.com/chenyu-ed-lee" target="_blank">
-                        <i class="fa fa-github-square fa-3x"></i>
-                        <p>Github</p>
-                    </a>
-                </div>
-                <div class="col-md-3 text-center">
-                    <a href="mailto:chenyu.ed.lee@gmail.com">
-                        <i class="fa fa-envelope fa-3x"></i>
-                        <p>chenyu.ed.lee@gmail.com</p>
-                    </a>
-                </div>
-                <div class="col-md-3 text-center">
-                    <a href="files/ed_resume.pdf" target="_blank">
-                        <i class="fa fa-file-text fa-3x"></i>
-                        <p>My Resume</p>
-                    </a>
-                </div>
+                
             </div>
         </div>
     </section>
