Fixing modal fade to hide

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
     <!-- Modal -->
-    <div id="yearbookModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="yearbookModal" aria-hidden="true">
+    <div id="yearbookModal" class="modal hide" role="dialog" tabindex="-1" aria-labelledby="yearbookModal" aria-hidden="true">
         <div class="modal-dialog">
             <!-- Modal content for Yearbook -->
             <div class="modal-content">
@@ -172,7 +172,7 @@
         </div>
     </div>
     <!-- Modal -->
-    <div id="textmeModal" class="modal fade" role="dialog" tabindex="-1" aria-labelledby="textmeModal" aria-hidden="true">
+    <div id="textmeModal" class="modal hide" role="dialog" tabindex="-1" aria-labelledby="textmeModal" aria-hidden="true">
         <div class="modal-dialog">
             <!-- Modal content for TextMe -->
             <div class="modal-content">
