--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2>Yearbook</h2>
                         <div class="project">
                             <div data-toggle="modal" data-target="#yearbookModal" class="portfolio-box">
-                                <img src="img/portfolio/yearbook.png" class="img-responsive" alt="">
+                                <img src="img/portfolio/yearbook.png" class="img-responsive" alt="Go to Yearbook">
                                 <div class="portfolio-box-caption">
                                     <div class="portfolio-box-caption-content">
                                         <div class="project-name">
