--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Ed's interactive resume website.">
     <meta name="author" content="Ed C. Lee">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/ >
-    <title>Ed C. Lee</title>
+    <title>Ed Lee</title>
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
