--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <header>
         <div id="home" class="header-content">
             <div class="header-content-inner">
-                <h1>Ed C. Lee</h1>
+                <h1>Ed Lee</h1>
                 <hr>
                 <div><img src="img/me.jpg" class="circular_pic"></div>
                 <h3>I am a Web Developer/Coding Ninja</h3>
