--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1>Ed Lee</h1>
                 <hr>
                 <div><img src="img/me.jpg" class="circular_pic"></div>
-                <h3>I am a Web Developer/Coding Ninja</h3>
+                <h3>Front End Software Engineer/Web Developer</h3>
                 <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Start Here</a> -->
             </div>
         </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="details">
                     <p>
-                        I am a web developer with a business background. As a developer, I really enjoy spending time on fine-tuning little details and building web sites or rich interactive web apps. As a business professional, I enjoy spending time to communicate and understand how I can be helpful to someone. Possessing both elements, I would combine the best of both worlds to create values and strive for quality.  
+                        I am a Front End Software Engineer/Web Developer who is proficient with CSS, HTML, Javascript, jQuery, and other JS frameworks (Angular, React, etc.). I enjoy the entire web development process, including design, development and deployment, with some back-end knowledge. 
                     </p>
                     <!-- <p>
                         In my spare time, I like to shoot some hoops, check Reddit for the latest, and cook delicious food.
