--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <div class="col-md-3 text-center">
-                        <a href="ttps://www.linkedin.com/in/edwardclee" target="_blank">
+                        <a href="https://www.linkedin.com/in/edwardclee" target="_blank">
                             <i class="fa fa-linkedin-square fa-3x"></i>
                             <p>LinkedIn</p>
                         </a>
